Add basic frame work and mobile nav section

--- a/scss/stylesheet.scss
+++ b/scss/stylesheet.scss
@@ -1,7 +1,6 @@
-html {
-	background-color: red;
-}
-
-p {
-	color: green;
-}
+@import 'partials/normalize',
+		'partials/base-styles',
+		'partials/content-styles',
+		'partials/layout-styles',
+		'partials/media-queries'
+		;
