--- a/scss/stylesheet.scss
+++ b/scss/stylesheet.scss
@@ -1,4 +1,5 @@
-@import 'partials/normalize',
+@import 'partials/mixins',
+		'partials/normalize',
 		'partials/base-styles',
 		'partials/content-styles',
 		'partials/layout-styles',
