--- a/scss/partials/_base-styles.scss
+++ b/scss/partials/_base-styles.scss
@@ -1,47 +1,11 @@
- 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+* {
+  font-family: Arial Rounded MT Bold,Helvetica Rounded,Arial,sans-serif;
+  //border: 1px solid red;
+}
+h2 {
+    text-align: center;
+}
 
 
 
@@ -56,31 +20,62 @@
   overflow: hidden;
   background-color: #333;
   position: relative;
+  //max-height: ;
     #myLinks {
-      display: none;
+        //float:
+        display: none;
+        background-color: #333;
     }
     a {              /* Style navigation menu links */
-      color: white;
-      padding: 14px 16px;
+      margin: 2%;
+      color: #fff;
       text-decoration: none;
       font-size: 17px;
       display: block;
+
         &.icon {          /* Style the hamburger menu */
-          background: black;
-          display: block;
-          position: absolute;
-          left: 0;
-          top: 0;
+            height: 44px;
+            width: 44px;
+            background: #333;
+            padding: auto;
+
+            font-size: 24px;
+            display: block;
+            position: absolute;
+            left: 0;
+            top: 0;
         }
         &:hover {         /* Add a grey background color on mouse-over */
-          background-color: #ddd;
+          background-color: #ddf;
           color: black;
+        }
+        h1 {
+            text-align: center;
+            margin: 2% 0;
+            font-size: 23px;
+            height: 24px;
+            padding: 10px;
+            border-radius: 0 5px 5px 0;
+            font-weight: 400;
+        }
+        i {
+            text-align: center;
+            margin: 10px 11px;
         }
     }
 }
 
+h2 {
+    font-size: 20px;
+}
+
+p, h2, h3, h4 {
+    color: #333;
+}
+
+
 /* Style the active link (or home/logo) */
-.active {
-  background-color: #4CAF50;
-  color: white;
-} 
+// .active {
+//   background-color: #4CAF50;
+//   color: white;
+// }
