--- a/scss/partials/_layout-styles.scss
+++ b/scss/partials/_layout-styles.scss
@@ -1,3 +1,6 @@
+/* -------------
+Layout Styles */
+
 .wrapper {
   width: 90%;
   margin: auto;
@@ -41,11 +44,12 @@
 			display: none;
 		}
 		&.fourthree {
-			width: 69%;
+            width: 100%;
+			//width: 69%;
 			// float: left;
 		}
 		&.mobile{
-			width: 30%;
+			//width: 30%;
             display: none;
 			// float: right;
 		}
@@ -75,9 +79,18 @@
 }
 
 //footer
+/* Style the Footer */
 
 footer {
-    margin: 10px 0 20px;
+
+}
+footer {
+    padding: 20px;
+    margin: 10px 0 0;
+    background-color: #333;
+    i {
+        color: white;
+    }
 }
 
 //social
@@ -85,7 +98,7 @@ footer {
     text-align: center;
     .fab {
         font-size: 40px;
-        color: #333;
+        color: #eee;
         text-decoration: none;
         padding: 5px;
     }
