--- a/scss/partials/_media-queries.scss
+++ b/scss/partials/_media-queries.scss
@@ -1,4 +1,5 @@
-
+/* -------------
+Media Queries */
 
 @include mq('xs') {
     h1 {
@@ -9,7 +10,7 @@
 @include mq('sm') {
     img {
         &.wide {
-            display: inline-flex;
+            //display: ;
         }
 
     }
