added media queries for images on larrger viewports

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -407,12 +407,8 @@ Layout Styles */
 .work img {
   max-width: 100%;
   border-radius: 5px; }
-  .work img.wide {
-    display: none; }
   .work img.fourthree {
     width: 100%; }
-  .work img.mobile {
-    display: none; }
 
 .contact {
   margin-bottom: 10px; }
@@ -450,10 +446,21 @@ footer {
 Media Queries */
 @media (max-width: 575px) {
   h1 {
-    margin: 0; } }
+    margin: 0; }
+
+  img.wide {
+    display: none; }
+  img.mobile {
+    display: none; } }
 @media (min-width: 576px) {
-  .about image.profile {
+  .image-showcase img.wide {
+    display: inline-block; }
+
+  .about img.profile {
     margin-right: 10px;
-    margin-bottom: 10px; } }
+    margin-bottom: 10px; }
+
+  * {
+    border: 1px solid red; } }
 
 /*# sourceMappingURL=stylesheet.css.map */
