--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -353,10 +353,10 @@ h2 {
       position: absolute;
       left: 0;
       top: 0; }
+      .topnav a.icon:hover {
+        color: red; }
     .topnav a:hover {
-      /* Add a grey background color on mouse-over */
-      background-color: #ddf;
-      color: black; }
+      /* Add a grey background color on mouse-over */ }
     .topnav a h1 {
       text-align: center;
       margin: 2% 0;
@@ -375,7 +375,10 @@ h2 {
 p, h2, h3, h4 {
   color: #333; }
 
-/* Style the active link (or home/logo) */
+/*Style the active link (or home/logo) */
+.active {
+  color: red; }
+
 /* --------------
 Content Styles */
 /* -------------
@@ -384,7 +387,9 @@ Layout Styles */
   width: 90%;
   margin: auto; }
 
-/* Main Content */
+/* ------------
+Main Content */
+/* About */
 .about {
   display: flex;
   flex-direction: column;
@@ -397,28 +402,36 @@ Layout Styles */
   .about p {
     margin: 10px auto 0; }
 
+/* Website Showcase */
+.work .showcase {
+  display: flex; }
 .work h2 {
-  text-align: center; }
+  width: 52px;
+  margin: 10px auto; }
 .work h3 {
   font-size: 17px;
   margin-bottom: 0; }
 .work .image-showcase {
-  display: flex; }
+  display: flex;
+  flex-wrap: wrap; }
 .work img {
-  max-width: 100%;
   border-radius: 5px; }
-  .work img.fourthree {
-    width: 100%; }
 
+/* Contact */
 .contact {
-  margin-bottom: 10px; }
+  margin-bottom: 18px; }
   .contact a.email-address, .contact a.twitter-handle {
     color: #333;
     text-decoration: none;
-    font-size: 20px; }
+    font-weight: 500; }
+    .contact a.email-address:hover, .contact a.twitter-handle:hover {
+      color: red; }
   .contact .fas, .contact .fab {
     margin-right: 10px;
     font-size: 18px; }
+  .contact h2 {
+    width: 77px;
+    margin: 10px auto; }
 
 .chevron {
   margin: 0 auto;
@@ -433,18 +446,22 @@ footer {
   background-color: #333; }
   footer i {
     color: white; }
-
-.social {
-  text-align: center; }
-  .social .fab {
-    font-size: 40px;
-    color: #eee;
-    text-decoration: none;
-    padding: 5px; }
+  footer .social {
+    text-align: center; }
+    footer .social .fab {
+      font-size: 40px;
+      color: #eee;
+      text-decoration: none;
+      padding: 5px; }
+      footer .social .fab:hover {
+        color: red; }
 
 /* -------------
 Media Queries */
 @media (max-width: 575px) {
+  .showcase {
+    flex-direction: column; }
+
   h1 {
     margin: 0; }
 
@@ -453,14 +470,23 @@ Media Queries */
   img.mobile {
     display: none; } }
 @media (min-width: 576px) {
-  .image-showcase img.wide {
-    display: inline-block; }
+  .showcase {
+    flex-direction: row-reverse; }
+
+  .image-showcase {
+    max-height: 540px; }
+    .image-showcase img.mobile {
+      display: none; }
+    .image-showcase img.wide {
+      display: none; }
 
   .about img.profile {
     margin-right: 10px;
-    margin-bottom: 10px; }
-
-  * {
-    border: 1px solid red; } }
+    margin-bottom: 10px; } }
+@media (min-width: 801px) {
+  .image-showcase img.mobile {
+    display: inline-block; }
+  .image-showcase img.wide {
+    display: inline-block; } }
 
 /*# sourceMappingURL=stylesheet.css.map */
