--- a/scss/partials/_layout-styles.scss
+++ b/scss/partials/_layout-styles.scss
@@ -1,5 +1,6 @@
-/* -------------
-Layout Styles */
+/* ----------
+Layout Styles
+-----------*/
 
 .wrapper {
   width: 90%;
@@ -17,7 +18,7 @@ Main Content */
     flex-wrap: wrap;
     align-items: center;
     margin: 25px 0 0;
-    img.profile {
+    img {
             width: 65%;
 		    border-radius: 50%;
 	}
@@ -29,13 +30,13 @@ Main Content */
 /* Website Showcase */
 
 .work {
-    .showcase {
+    .showcase, .container {
         display: flex;
 
     }
     h2 {
         width: 52px;
-        margin: 10px auto;
+        margin: 20px auto 40px;
     }
     h3 {
         font-size: 17px;
@@ -59,6 +60,17 @@ Main Content */
     }
 }
 
+.showcase {
+    margin-bottom: 20px;
+}
+
+.site-description {
+    margin-right: 30px;
+}
+
+.image-showcase {
+    //margin-left: 30px;
+}
 /* Contact */
 
 .contact {
