--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -317,6 +317,9 @@ ul {
   padding: 0;
   list-style: none;
 }*/
+/*---------
+Base Styles
+---------*/
 * {
   font-family: Arial Rounded MT Bold,Helvetica Rounded,Arial,sans-serif; }
 
@@ -324,7 +327,20 @@ h2 {
   text-align: center;
   border: 2px solid #555;
   border-radius: 5px;
-  padding: 5px; }
+  padding: 5px;
+  background-color: #eee; }
+
+/* Style Horizontal Rules */
+.section-title {
+  margin: 20px auto;
+  height: 37px;
+  position: relative; }
+  .section-title hr {
+    width: 100%;
+    color: #333;
+    position: absolute;
+    top: 10px;
+    z-index: -1; }
 
 /* Style the navigation menu */
 .topnav {
@@ -335,7 +351,7 @@ h2 {
   .topnav #myLinks {
     display: none;
     background-color: #333; }
-    .topnav #myLinks:last-child {
+    .topnav #myLinks div:last-child {
       margin-bottom: 2%; }
     .topnav #myLinks a {
       padding-left: 10px; }
@@ -405,11 +421,9 @@ Main Content */
   .about img {
     width: 65%;
     border-radius: 50%; }
-  .about p {
-    margin: 10px auto 0; }
 
 /* Website Showcase */
-.work .showcase, .work .container {
+.work .showcase {
   display: flex; }
 .work h2 {
   width: 52px;
@@ -424,10 +438,7 @@ Main Content */
   border-radius: 5px; }
 
 .showcase {
-  margin-bottom: 20px; }
-
-.site-description {
-  margin-right: 30px; }
+  margin: 10px 0; }
 
 /* Contact */
 .contact {
@@ -483,8 +494,11 @@ Media Queries
   img.mobile {
     display: none; } }
 @media (min-width: 576px) {
-  .showcase {
-    flex-direction: row-reverse; }
+  .work {
+    margin: auto;
+    justify-content: space-between; }
+    .work div:nth-of-type(odd) {
+      flex-direction: row-reverse; }
 
   .image-showcase {
     max-width: 50%;
@@ -497,8 +511,17 @@ Media Queries
     margin-bottom: 10px; } }
 @media (min-width: 801px) {
   .about {
-    flex-direction: row; }
+    flex-direction: row;
+    justify-content: center; }
+    .about h2 {
+      order: -1;
+      margin: inherit auto;
+      display: block;
+      text-align: center; }
     .about img.profile {
-      width: 20%; } }
+      width: 30%; } }
+@media (min-width: 1200px) {
+  .wrapper {
+    width: 60%; } }
 
 /*# sourceMappingURL=stylesheet.css.map */
