--- a/scss/partials/_layout-styles.scss
+++ b/scss/partials/_layout-styles.scss
@@ -18,25 +18,25 @@ Main Content */
     flex-wrap: wrap;
     align-items: center;
     margin: 25px 0 0;
+
     img {
             width: 65%;
 		    border-radius: 50%;
 	}
     p {
-        margin: 10px auto 0;
+
     }
 }
 
 /* Website Showcase */
 
 .work {
-    .showcase, .container {
+    .showcase {
         display: flex;
 
     }
     h2 {
         width: 52px;
-        margin: 20px auto 40px;
     }
     h3 {
         font-size: 17px;
@@ -61,11 +61,11 @@ Main Content */
 }
 
 .showcase {
-    margin-bottom: 20px;
+    margin: 10px 0;
 }
 
 .site-description {
-    margin-right: 30px;
+    //margin-right: 30px;
 }
 
 .image-showcase {
