--- a/scss/partials/_media-queries.scss
+++ b/scss/partials/_media-queries.scss
@@ -6,6 +6,7 @@ Media Queries
     .showcase {
         flex-direction: column;
 
+
     }
     h1 {
         margin: 0;
@@ -23,10 +24,14 @@ Media Queries
 }
 
 @include mq('sm') {
-    .showcase {
+    .work {
+        margin: auto;
+        justify-content: space-between;
+        div:nth-of-type(odd) {
         flex-direction: row-reverse;
-
+        }
     }
+
     .image-showcase {
         max-width: 50%;
         height: auto;
@@ -52,8 +57,16 @@ Media Queries
 @include mq('med') {
     .about {
         flex-direction: row;
+        justify-content: center;
+        h2 {
+            order: -1;
+            margin: inherit auto;
+            display: block;
+            text-align: center;
+
+        }
         img.profile {
-            width: 20%;
+            width: 30%;
 
         }
     }
@@ -72,5 +85,7 @@ Media Queries
 }
 
 @include mq('lg') {
-
+    .wrapper {
+        width: 60%;
+    }
 }
