--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -328,13 +328,23 @@ h2 {
   border: 2px solid #555;
   border-radius: 5px;
   padding: 5px;
-  background-color: #eee; }
+  background-color: #eee;
+  width: 60px;
+  margin: 0 auto; }
+
+i:hover, a:hover {
+  color: red;
+  transition: 0.5s ease; }
+
+.wrapper {
+  position: relative; }
 
 /* Style Horizontal Rules */
 .section-title {
   margin: 20px auto;
-  height: 37px;
-  position: relative; }
+  position: relative;
+  width: 100%;
+  height: 37px; }
   .section-title hr {
     width: 100%;
     color: #333;
@@ -342,12 +352,16 @@ h2 {
     top: 10px;
     z-index: -1; }
 
+hr {
+  margin-bottom: 32px; }
+
 /* Style the navigation menu */
 .topnav {
   /* Hide the links inside the navigation menu (except for logo/home) */
   overflow: hidden;
   background-color: #333;
-  position: relative; }
+  position: relative;
+  padding-bottom: 20px; }
   .topnav #myLinks {
     display: none;
     background-color: #333; }
@@ -355,6 +369,9 @@ h2 {
       margin-bottom: 2%; }
     .topnav #myLinks a {
       padding-left: 10px; }
+      .topnav #myLinks a:hover {
+        color: red;
+        transition: 0.5s ease; }
   .topnav a {
     /* Style navigation menu links */
     margin: 2% 2% 10px;
@@ -414,20 +431,21 @@ Main Content */
 /* About */
 .about {
   display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  align-items: center;
-  margin: 25px 0 0; }
+  flex-direction: column; }
   .about img {
     width: 65%;
-    border-radius: 50%; }
+    border-radius: 50%;
+    margin: 6px auto 20px; }
 
 /* Website Showcase */
 .work .showcase {
   display: flex; }
-.work h2 {
-  width: 52px;
-  margin: 20px auto 40px; }
+.work .section-title {
+  margin: inherit auto; }
+  .work .section-title h2 {
+    width: 52px;
+    text-align: center;
+    margin: 10px auto; }
 .work h3 {
   font-size: 17px;
   margin-bottom: 0; }
@@ -442,16 +460,17 @@ Main Content */
 
 /* Contact */
 .contact {
-  margin-bottom: 18px; }
+  margin-bottom: 30px; }
   .contact a.email-address, .contact a.twitter-handle {
     color: #333;
     text-decoration: none;
-    font-weight: 500; }
+    font-weight: 500;
+    vertical-align: middle; }
     .contact a.email-address:hover, .contact a.twitter-handle:hover {
       color: red; }
   .contact .fas, .contact .fab {
     margin-right: 10px;
-    font-size: 18px; }
+    font-size: 24px; }
   .contact h2 {
     width: 77px;
     margin: 10px auto; }
@@ -461,6 +480,13 @@ Main Content */
   text-align: center;
   font-size: 18px;
   color: #333; }
+
+.fa-chevron-down {
+  color: #333;
+  font-size: 22px; }
+  .fa-chevron-down:hover {
+    color: red;
+    transition: 0.5s ease; }
 
 /* Style the Footer */
 footer {
@@ -505,21 +531,29 @@ Media Queries
     height: auto; }
     .image-showcase img.mobile {
       display: none; }
+    .image-showcase img.wide {
+      display: none; }
 
   .about img.profile {
-    margin-right: 10px;
-    margin-bottom: 10px; } }
+    margin: 20px auto 20px; } }
 @media (min-width: 801px) {
+  hr {
+    display: none; }
+
+  h2 {
+    background-color: white;
+    border: none;
+    font-size: 26px; }
+
   .about {
     flex-direction: row;
-    justify-content: center; }
+    justify-content: flex-start;
+    align-items: stretch; }
     .about h2 {
       order: -1;
       margin: inherit auto;
       display: block;
-      text-align: center; }
-    .about img.profile {
-      width: 30%; } }
+      text-align: center; } }
 @media (min-width: 1200px) {
   .wrapper {
     width: 60%; } }
