--- a/scss/partials/_base-styles.scss
+++ b/scss/partials/_base-styles.scss
@@ -12,13 +12,27 @@ h2 {
     border-radius: 5px;
     padding: 5px;
     background-color: #eee;
+    width: 60px;
+    margin: 0 auto;
+}
+
+i, a {
+    &:hover {
+    color: red;
+    transition: 0.5s ease;
+    }
+}
+
+.wrapper {
+    position: relative;
 }
 
 /* Style Horizontal Rules */
 .section-title {
     margin: 20px auto;
-    height: 37px;
     position: relative;
+    width: 100%;
+    height: 37px;
     hr {
         width: 100%;
         color: #333;
@@ -28,7 +42,19 @@ h2 {
     }
 }
 
+// .about hr {
+//     box-sizing: content-box;
+//     height: 0;
+//     overflow: visible;
+//     width: 100%;
+//     z-index: -1;
+//     position: absolute;
+//     top: 48px;
+// }
 
+hr {
+    margin-bottom: 32px;
+}
 
 
 
@@ -38,6 +64,7 @@ h2 {
   overflow: hidden;
   background-color: #333;
   position: relative;
+  padding-bottom: 20px;
   //max-height: ;
     #myLinks {
         //float:
@@ -48,6 +75,10 @@ h2 {
         }
         a {
             padding-left: 10px;
+            &:hover {
+                color: red;
+                transition: 0.5s ease;
+            }
         }
     }
     a {              /* Style navigation menu links */
