--- a/scss/partials/_layout-styles.scss
+++ b/scss/partials/_layout-styles.scss
@@ -16,16 +16,18 @@ Main Content */
     display: flex;
     flex-direction: column;
     //flex-wrap: wrap;
-    //align-items: center;
+    align-items: center;
+
     img {
-        width: 65%;
-	    border-radius: 50%;
-        margin: 6px auto 20px;
+            max-width: 100%;
+		    border-radius: 50%;
+            margin: 6px auto 20px;
 	}
     p {
 
     }
 }
+
 /* Website Showcase */
 
 .work {
@@ -33,13 +35,9 @@ Main Content */
         display: flex;
 
     }
-    .section-title {
+    h2 {
+        width: 52px;
         margin: inherit auto;
-        h2 {
-            width: 52px;
-            text-align: center;
-            margin: 10px auto;
-        }
     }
     h3 {
         font-size: 17px;
@@ -53,7 +51,8 @@ Main Content */
         flex-wrap: wrap;
     }
 	img {
-		//max-width: 100%;
+		max-width: 100%;
+        height: auto;
 		border-radius: 5px;
 		&.fourthree {
             //width: 100%;
@@ -77,19 +76,18 @@ Main Content */
 /* Contact */
 
 .contact {
-    margin-bottom: 30px;
+    margin-bottom: 18px;
     a.email-address, a.twitter-handle {
         color: #333;
         text-decoration: none;
         font-weight: 500;
-        vertical-align: middle;
         &:hover {
             color: red;
         }
     }
     .fas, .fab {
         margin-right: 10px;
-        font-size: 24px;
+        font-size: 18px;
     }
     h2 {
         width: 77px;
@@ -104,15 +102,6 @@ Main Content */
     text-align: center;
     font-size: 18px;
     color: #333;
-}
-
-.fa-chevron-down {
-    color: #333;
-    font-size: 22px;
-    &:hover {
-        color: red;
-        transition: 0.5s ease;
-    }
 }
 
 //footer
