--- a/scss/partials/_media-queries.scss
+++ b/scss/partials/_media-queries.scss
@@ -3,11 +3,15 @@ Media Queries
 -----------*/
 
 @include mq('xs') {
+    * {
+        //border: 1px solid cyan;
+    }
+    .about .img {
+        width: 60%;
 
+    }
     .showcase {
         flex-direction: column;
-
-
     }
     h1 {
         margin: 0;
@@ -25,6 +29,9 @@ Media Queries
 }
 
 @include mq('sm') {
+    * {
+        //border: 1px solid green;
+    }
     .work {
         margin: auto;
         justify-content: space-between;
@@ -55,6 +62,9 @@ Media Queries
 }
 
 @include mq('med') {
+    * {
+        //border: 1px solid blue;
+    }
     hr {
         display: none;
     }
@@ -67,11 +77,17 @@ Media Queries
         flex-direction: row;
         justify-content: flex-start;
         align-items: stretch;
+        img {
+            margin-right: 20px;
+        }
         h2 {
             order: -1;
             margin: inherit auto;
             display: block;
             text-align: center;
+        }
+        .about-text {
+
         }
     }
     .image-showcase {
@@ -89,6 +105,9 @@ Media Queries
 }
 
 @include mq('lg') {
+    * {
+        //border: 1px solid red;
+    }
     .wrapper {
         width: 60%;
     }
