--- a/scss/partials/_media-queries.scss
+++ b/scss/partials/_media-queries.scss
@@ -32,11 +32,25 @@ Media Queries
     * {
         //border: 1px solid green;
     }
+    h2 {
+        margin: 0;
+    }
+    .chevron {
+        font-size: 26px;
+        margin: 20px auto;
+        color: black;
+    }
     .work {
         margin: auto;
         justify-content: space-between;
+        .site-description {
+            margin-left: 30px;
+        }
         div:nth-of-type(odd) {
         flex-direction: row-reverse;
+        .site-description {
+            margin-left: 0px;
+        }
         }
     }
 
@@ -58,6 +72,36 @@ Media Queries
         img.profile {
             margin: 20px auto 20px;
         }
+        .about-text {
+            width: 75%;
+            margin-left: 50px;
+        }
+    }
+    .contact {
+        div & {
+            margin-bottom: 50px;
+        }
+        h2 {
+            margin: 0;
+        }
+        .fas, .fab {
+            font-size: 25px;
+        }
+        .email-address, .twitter-handle {
+            font-size: 20px;
+        }
+    }
+    .work {
+        h3 {
+            font-size: 24px;
+            margin: 0;
+        }
+        .showcase {
+            margin-top: 36px;
+        }
+        .site-description {
+            margin-right: 10px;
+        }
     }
 }
 
@@ -65,13 +109,21 @@ Media Queries
     * {
         //border: 1px solid blue;
     }
+    p {
+        font-size: 20px;
+    }
     hr {
         display: none;
     }
     h2 {
         background-color: white;
         border: none;
-        font-size: 26px;
+        font-size: 30px;
+    }
+    .topnav a h1 {
+        font-size: 40px;
+        margin: 0 auto;
+        padding: 10px 0 30px;
     }
     .about {
         flex-direction: row;
@@ -85,9 +137,6 @@ Media Queries
             margin: inherit auto;
             display: block;
             text-align: center;
-        }
-        .about-text {
-
         }
     }
     .image-showcase {
@@ -109,6 +158,6 @@ Media Queries
         //border: 1px solid red;
     }
     .wrapper {
-        width: 60%;
+        width: 80%;
     }
 }
