--- a/scss/partials/_base-styles.scss
+++ b/scss/partials/_base-styles.scss
@@ -3,7 +3,7 @@ Base Styles
 ---------*/
 
 * {
-  font-family: Arial Rounded MT Bold,Helvetica Rounded,Arial,sans-serif;
+    font-family: 'Roboto', sans-serif;
   //border: 1px solid red;
 }
 h2 {
