--- a/scss/partials/_base-styles.scss
+++ b/scss/partials/_base-styles.scss
@@ -68,7 +68,7 @@ hr {
   //max-height: ;
     #myLinks {
         //float:
-        display: none;
+        //display: none;
         background-color: #333;
         div:last-child {
             margin-bottom: 2%;
@@ -121,7 +121,7 @@ hr {
         }
         i {
             text-align: center;
-            margin: 10px 11px;
+            padding: 10px 11px;
         }
     }
 }
