added scrolling animation to nav

--- a/scss/partials/_base-styles.scss
+++ b/scss/partials/_base-styles.scss
@@ -122,6 +122,9 @@ hr {
         i {
             text-align: center;
             padding: 10px 11px;
+            &:hover {
+                cursor: pointer;
+            }
         }
     }
 }
