fix twitter icon color in contact section and clean up anchor tags in that section

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -404,6 +404,8 @@ hr {
     .topnav a i {
       text-align: center;
       padding: 10px 11px; }
+      .topnav a i:hover {
+        cursor: pointer; }
 
 h2 {
   font-size: 20px; }
